--- a/utils/research.ipynb
+++ b/utils/research.ipynb
@@ -35,16 +35,17 @@
     "    device=\"cuda\",\n",
     "    is_controlnet=False,\n",
     "    controlnet_model_id=None,\n",
-    "    quantize=True,\n",
-    "    dtype=\"FP16\",\n",
-    "    quantize_dtype=\"INT8\",\n",
-    "    quantize_backend=\"BitsAndBytes\",\n",
-    "    attention_mechanism=\"SageAttention2\",\n",
+    "    quantize=False,\n",
+    "    dtype=\"BF16\",\n",
+    "    quantize_dtype=\"None\",\n",
+    "    quantize_backend=\"None\",\n",
+    "    attention_mechanism=\"FlashAttention2\",\n",
     "    attention_caching=\"TeaCache\",\n",
     "    vae_optimizations=\"None\",\n",
     "    parallel_gpu_setup=False,\n",
     "    parallel_gpu_optimizations=None,\n",
-    "    compilations=None\n",
+    "    compilations=None,\n",
+    "    caching_threshold=0.35\n",
     ")\n",
     "\n",
     "flux_config\n"
